idea/testData/multiModuleHighlighting/multiplatform/basic/common/common.kt
header class <error descr="[HEADER_WITHOUT_IMPLEMENTATION] 'header' class 'My' has no implementation in module jvm for JVM">My</error> {

}
